sbt,clojureの起動処理修正